# autofeeder

./: .env.example  .gitignore  DESIGN.md  README.md  _oneoff_meningioma.py  _resend_monday_chinese.py  _resend_today.py  _resend_weekly_catchup.py  _resend_weekly_to_jin.py  autofeeder.py  config.py  config.toml  content.py  cross_profile.py  discover.py  feed_health.py  fetch.py  ledger.py  prefilter.py  profiles.py  pubmed.py  pyproject.toml  requirements.txt  setup_wizard.py
.github/workflows/: digest.yml
backends/: __init__.py  _shared.py  anthropic_backend.py  openai_backend.py
docs/: model-zoo.md
output/ai-agents/: 2026-04-27.md
output/alzheimers/: 2026-04-27.md
output/china-geopolitics/: 2026-04-27.md
output/dna-delivery/: 2026-04-27.md
output/frontier-ai/: 2026-04-27.md
output/gaming/: 2026-04-27.md
output/github-agents/: 2026-04-27.md
output/meningioma/: 2026-04-27.md
outputs/: __init__.py  email.py  markdown.py  obsidian.py  slack.py
profiles/: abc-news.toml  agentic-tools.toml  ai-agents.toml  alzheimers.toml  china-geopolitics.toml  china.toml  dna-delivery.toml  frontier-ai.toml  frontier-ml.toml  gaming.toml  homecare-robotics.toml  meningioma.toml  nanomedicine-tcm.toml  neuroimaging-ai.toml  oakland-medical.toml  stem-cell-therapy.toml  venus.toml
prompts/: discover.txt  summarize.txt  tldr.txt  triage.txt
tests/: conftest.py  test_config.py  test_cross_profile.py  test_discover.py  test_feed_health.py  test_fetch.py  test_ledger.py  test_outputs.py  test_prefilter.py  test_profiles.py  test_shared.py
(+7 files in other folders)
